--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html --open",
+    "start-main": "parcel src/main.html --open",
     "clean": "rm -rf dist/*",
     "build:parcel": "parcel build src/index.html --no-minify --no-source-maps --public-url ./",
     "build": "npm run clean && npm run build:parcel"
