--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "parcel src/index.html --open",
     "start-main": "parcel src/main.html --open",
     "clean": "rm -rf dist/*",
-    "build:parcel": "parcel build src/index.html --no-minify --no-source-maps --public-url ./",
+    "build-old:parcel": "parcel build src/index.html --no-minify --no-source-maps --public-url ./",
+    "build:parcel": "parcel build src/main.html --no-minify --no-source-maps --public-url ./",
     "build": "npm run clean && npm run build:parcel"
   },
   "repository": {
