update build command

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "start-main": "parcel src/main.html --open",
+    "start-main": "parcel src/index.html --open",
     "clean": "rm -rf dist/*",
-    "build-old:parcel": "parcel build src/index.html --no-minify --no-source-maps --public-url ./",
-    "build:parcel": "parcel build src/main.html --no-minify --no-source-maps --public-url ./",
+    "build-old:parcel": "parcel build src/index2.html --no-minify --no-source-maps --public-url ./",
+    "build:parcel": "parcel build src/index.html --no-minify --no-source-maps --public-url ./",
     "build": "npm run clean && npm run build:parcel"
   },
   "repository": {
